{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 20,
  "lineage": "40a2e702-e792-fed3-937d-45dfe9aa1d93",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357402308721:security-group/sg-02b6fec418d86587e",
            "description": "Allow TCP Access to ECS",
            "filter": null,
            "id": "sg-02b6fec418d86587e",
            "name": "Chris-Agent-LB-SG",
            "region": "eu-west-2",
            "tags": {
              "Security Group": "Chris-Agent-LB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfd9c615c35f116e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357402308721:subnet/subnet-0294643997eace1f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0294643997eace1f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357402308721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "state": "available",
            "vpc_id": "vpc-0dfd9c615c35f116e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357402308721:subnet/subnet-02821829c80fe512c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02821829c80fe512c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357402308721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "state": "available",
            "vpc_id": "vpc-0dfd9c615c35f116e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357402308721:vpc/vpc-0dfd9c615c35f116e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-033dc9be911a1a6d2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0da4116a1386d6a96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dfd9c615c35f116e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cff305fd81ac8dfc",
            "owner_id": "357402308721",
            "region": "eu-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "fep_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:357402308721:targetgroup/fep-tg/0d661dd93c3b7ce0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:357402308721:listener-rule/app/Chris-Agent-LB/edabc91bfe9420a2/21c8d550f2791f59/c29315a5aea2b5a9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/FEP*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:357402308721:listener-rule/app/Chris-Agent-LB/edabc91bfe9420a2/21c8d550f2791f59/c29315a5aea2b5a9",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:357402308721:listener/app/Chris-Agent-LB/edabc91bfe9420a2/21c8d550f2791f59",
            "priority": 110,
            "region": "eu-west-2",
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb_target_group.fep_tg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fep_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:357402308721:targetgroup/fep-tg/0d661dd93c3b7ce0",
            "arn_suffix": "targetgroup/fep-tg/0d661dd93c3b7ce0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:357402308721:targetgroup/fep-tg/0d661dd93c3b7ce0",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fep-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dfd9c615c35f116e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}